--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -2,7 +2,7 @@
 	"ConfigTitle": "Default Configuration File",
 	"DateRun":"NA",
 	"WhoRan": "Default",
-	"FMRIPrepPath": "1.0.1",
+	"FMRIPrepPath": "/proj/cohenlab/projects/poldracklab_fmriprep_latest-2018-02-14-1c6af86ba750.img",
 	"NuisanceRegression": "QuadLagged",
 	"FilteringHighPass": 0.08,
 	"FilteringLowPass": 0.1,
