Fixed string issue

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -15,5 +15,5 @@
 	"SpatialSmoothing": "SUSAN",
 	"RunLog": [],
 	"BatchConfig": "slurmUNCConfig.json",
-	"FMRIPrepMemoryUsage": 20000
+	"FMRIPrepMemoryUsage": "20000"
 }
