--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -2,19 +2,30 @@
 	"ConfigTitle": "Default Configuration File",
 	"DateRun":"NA",
 	"WhoRan": "Default",
-	"FMRIPrepPath": "/proj/hng/singularity_imgs/poldracklab_fmriprep_latest-2018-02-14-1c6af86ba750.img",
-	"FreesurferLicensePath": "/proj/cohenlab/projects/license.txt",
-	"NuisanceRegression": "QuadLagged",
-	"FilteringHighPass": 0.08,
-	"FilteringLowPass": 0.1,
-	"FilteringOrder": 12,
-	"Scrubbing": "Scrub",
-	"ScrubAhead": 2,
-	"ScrubBehind": 2,
-	"ScrubContig": 4,
-	"SpatialSmoothing": "SUSAN",
+	"FMRIPrepOptions": {
+		"BIDSDirectory": "",
+		"OutputDirectory": "",
+		"FMRIPrepPath": "/proj/hng/singularity_imgs/poldracklab_fmriprep_latest-2018-02-14-1c6af86ba750.img",
+		"FreesurferLicensePath": "/proj/cohenlab/projects/license.txt",
+		"FMRIPrepMemoryUsage": "20000"
+	},
+	"PostProcessingOptions": {
+		"TargetDirectory": "",
+		"TargetSuffix": "Process.nii.gz",
+		"OutputDirectory": "",
+		"OutputSuffix": "",
+		"NuisanceRegression": "QuadLagged",
+		"FilteringHighPass": 0.08,
+		"FilteringLowPass": 0.1,
+		"FilteringOrder": 12,
+		"Scrubbing": "Scrub",
+		"ScrubAhead": 2,
+		"ScrubBehind": 2,
+		"ScrubContig": 4,
+		"SpatialSmoothing": "SUSAN",
+		"BIDSValidatorImage": "/proj/hng/singularity_imgs/validator.simg"
+	},
 	"RunLog": [],
 	"BatchConfig": "slurmUNCConfig.json",
-	"FMRIPrepMemoryUsage": "20000",
-	"BIDSValidatorImage": "/proj/hng/singularity_imgs/validator.simg"
+	"PostProcessingMemoryUsage": "10000"
 }
