--- a/clpipe/batchConfigs/slurmUNCConfig.json
+++ b/clpipe/batchConfigs/slurmUNCConfig.json
@@ -12,5 +12,6 @@
   "JobIDCommand": "--job-name",
   "OutputCommand": "--output",
   "CommandWrapper": "--wrap",
-  "SingularityBindPaths": "/proj,/pine,/nas02"
+  "SingularityBindPaths": "/proj,/pine,/nas02",
+  "SingularityHomeDir": "proj/hng/singularity_imgs"
 }
