Initial Debug Commit of postprocessing functions

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 venv/
 build/
 clpipe.egg-info/
+Test_BIDS/
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
