--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -9,14 +9,17 @@
 	},
 	"PostProcessingOptions": {
 		"TargetDirectory": "",
-		"TargetSuffix": "Process.nii.gz",
+		"TargetSuffix": "preproc_bold.nii.gz",
 		"OutputDirectory": "",
 		"OutputSuffix": "",
 		"NuisanceRegression": "QuadLagged",
 		"FilteringHighPass": 0.08,
 		"FilteringLowPass": 0.1,
 		"FilteringOrder": 12,
-		"Scrubbing": "Scrub",
+		"OversamplingFreq": 4,
+		"PercentFreqSample": 1,
+		"Scrubbing": true,
+		"ScrubFDThreshold": 0.3,
 		"ScrubAhead": 2,
 		"ScrubBehind": 2,
 		"ScrubContig": 4,
