--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -14,6 +14,9 @@
 		"OutputSuffix": "",
 		"ConfoundSuffix": "confound_regressors.tsv",
 		"NuisanceRegression": "QuadLagged",
+		"WhiteMatter": true,
+		"CSF": true,
+		"GlobalSignalRegression": false,
 		"FilteringHighPass": 0.08,
 		"FilteringLowPass": 0.1,
 		"FilteringOrder": 12,
