--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -13,6 +13,7 @@
 		"OutputDirectory": "",
 		"OutputSuffix": "",
 		"ConfoundSuffix": "confound_regressors.tsv",
+		"Regress": true,
 		"NuisanceRegression": "QuadLagged",
 		"WhiteMatter": true,
 		"CSF": true,
