Allow Bin Size for Spectral Interpolation to be configurable

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -29,7 +29,8 @@
 		"ScrubBehind": 2,
 		"ScrubContig": 4,
 		"SpatialSmoothing": "SUSAN",
-		"PostProcessingMemoryUsage": "5000",
+		"PostProcessingMemoryUsage": "10000",
+		"SpectralInterpolationBinSize": 3000,
 		"BIDSValidatorImage": "/proj/hng/singularity_imgs/validator.simg"
 	},
 	"RunLog": [],
