Allow for user defined memory usage

--- a/clpipe/batchConfigs/slurmUNCConfig.json
+++ b/clpipe/batchConfigs/slurmUNCConfig.json
@@ -4,12 +4,13 @@
     "command": "-n",
     "args": "1"
   }],
-  "SubOptionsEqual": [{"command": "--time",
-    "args": "16:0:0"}],
+  "SubOptionsEqual": [],
   "NThreadsCommand": "--cpus-per-task",
   "NThreads": "8",
   "MemoryCommand": "--mem=",
   "MemoryDefault": "20000",
+  "TimeCommand": "--time=",
+  "TimeDefault": "16:0:0",
   "JobIDCommand": "--job-name",
   "OutputCommand": "--output",
   "CommandWrapper": "--wrap",
