--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -30,6 +30,8 @@
 		"ScrubContig": 4,
 		"SpatialSmoothing": "SUSAN",
 		"PostProcessingMemoryUsage": "10000",
+		"PostProcessingTimeUsage": "8:0:0",
+		"NThreads": "1",
 		"SpectralInterpolationBinSize": 5000,
 		"BIDSValidatorImage": "/proj/hng/singularity_imgs/validator.simg"
 	},
