--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -37,5 +37,5 @@
 		"BIDSValidatorImage": "/proj/hng/singularity_imgs/validator.simg"
 	},
 	"RunLog": [],
-	"BatchConfig": "slurmUNCConfig.json",
+	"BatchConfig": "slurmUNCConfig.json"
 }
