--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -1,19 +1,53 @@
 {
 	"ConfigTitle": "Default Configuration File",
-	"DateRun":"NA",
-	"WhoRan": "Default",
-	"FMRIPrepPath": "/proj/cohenlab/projects/poldracklab_fmriprep_latest-2018-02-14-1c6af86ba750.img",
-	"FreesurferLicensePath": "/proj/cohenlab/projects/license.txt",
-	"NuisanceRegression": "QuadLagged",
-	"FilteringHighPass": 0.08,
-	"FilteringLowPass": 0.1,
-	"FilteringOrder": 12,
-	"Scrubbing": "Scrub",
-	"ScrubAhead": 2,
-	"ScrubBehind": 2,
-	"ScrubContig": 4,
-	"SpatialSmoothing": "SUSAN",
+    "HeudiconvOptions": {
+        "HeudiconvMemoryUsage": "5000",
+        "HeudiconvTimeUsage": "6:0:0"
+    },
+	"FMRIPrepOptions": {
+		"BIDSDirectory": "",
+		"WorkingDirectory": "",
+		"OutputDirectory": "",
+		"FMRIPrepPath": "/proj/hng/singularity_imgs/fmriprep1.2.6.simg",
+		"FreesurferLicensePath": "/proj/hng/singularity_imgs/license.txt",
+		"FMRIPrepMemoryUsage": "20000",
+		"FMRIPrepTimeUsage": "8:0:0"
+	},
+	"PostProcessingOptions": {
+		"TargetDirectory": "",
+		"TargetSuffix": "preproc_bold.nii.gz",
+		"OutputDirectory": "",
+		"OutputSuffix": "",
+		"ConfoundSuffix": "desc-confounds_regressors.tsv",
+		"Regress": true,
+		"RegressionParameters": {
+			  "MotionParams": ["trans_x","trans_y" ,"trans_z","rot_x","rot_z","rot_y"],
+			  "WhiteMatter": "white_matter",
+			  "CSF": "csf",
+  			  "FDLabel": "framewise_displacement",
+			  "GlobalSignal": "global_signal"
+		},
+		"NuisanceRegression": "QuadLagged",
+		"WhiteMatter": true,
+		"CSF": true,
+		"GlobalSignalRegression": false,
+		"FilteringHighPass": 0.008,
+		"FilteringLowPass": 0.1,
+		"FilteringOrder": 12,
+		"OversamplingFreq": 4,
+		"PercentFreqSample": 1,
+		"Scrubbing": true,
+		"ScrubFDThreshold": 0.3,
+		"ScrubAhead": 2,
+		"ScrubBehind": 2,
+		"ScrubContig": 4,
+		"SpatialSmoothing": "SUSAN",
+		"PostProcessingMemoryUsage": "20000",
+		"PostProcessingTimeUsage": "8:0:0",
+		"NThreads": "1",
+		"SpectralInterpolationBinSize": 5000,
+		"BIDSValidatorImage": "/proj/hng/singularity_imgs/validator.simg"
+	},
 	"RunLog": [],
-	"BatchConfig": "slurmUNCConfig.json",
-	"FMRIPrepMemoryUsage": "20000"
+	"BatchConfig": "slurmUNCConfig.json"
 }
