ROI extractor update

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -51,6 +51,11 @@
 		"SpectralInterpolationBinSize": 5000,
 		"BIDSValidatorImage": "/proj/hng/singularity_imgs/validator.simg"
 	},
+	"ROIExtractionOptions": {
+		"TargetDirectory": "",
+		"OutputDirectory": "",
+		"Atlases": ["power"]
+	},
 	"RunLog": [],
 	"BatchConfig": "slurmUNCConfig.json"
 }
