--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -53,6 +53,7 @@
 	},
 	"ROIExtractionOptions": {
 		"TargetDirectory": "",
+		"TargetSuffix": "",
 		"OutputDirectory": "",
 		"Atlases": ["power"],
         "MemoryUsage":"3000",
