--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -51,6 +51,26 @@
 		"SpectralInterpolationBinSize": 5000,
 		"BIDSValidatorImage": "/proj/hng/singularity_imgs/validator.simg"
 	},
+	"BetaSeriesOptions": {
+		"TargetDirectory": "",
+		"TargetSuffix": "preproc_bold.nii.gz",
+		"OutputDirectory": "",
+		"OutputSuffix": "betaseries.nii.gz",
+		"ConfoundSuffix": "desc-confounds_regressors.tsv",
+		"Regress": true,
+		"NuisanceRegression": "QuadLagged",
+		"WhiteMatter": true,
+		"CSF": true,
+		"GlobalSignalRegression": false,
+		"FilteringHighPass": 0.008,
+		"FilteringLowPass": 0.1,
+		"TaskSpecificOptions": [
+			{
+				"Task": "",
+				"ExcludeColumnInfo": "trial_type",
+				"ExcludeTrialTypes": ["block"]
+			}
+		],
 	"ROIExtractionOptions": {
 		"TargetDirectory": "",
 		"TargetSuffix": "",
