--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -1,6 +1,6 @@
 {
 	"ConfigTitle": "Default Configuration File",
-	"DICOMToBIDsOptions": {
+	"DICOMToBIDSOptions": {
 		"DICOMDirectory": "",
 		"BIDSDirectory": "",
 		"ConversionConfig": "",
