Initial Commit of project_setup

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -1,5 +1,6 @@
 {
 	"ConfigTitle": "Default Configuration File",
+	"ProjectDirectory": "",
 	"DICOMToBIDSOptions": {
 		"DICOMDirectory": "",
 		"BIDSDirectory": "",
