Added process stream

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -1,5 +1,5 @@
 {
-	"ConfigTitle": "Default Configuration File",
+	"ProjectTitle": "Default Configuration File",
 	"ProjectDirectory": "",
 	"DICOMToBIDSOptions": {
 		"DICOMDirectory": "",
