change to string formatting

--- a/clpipe/batchConfigs/slurmUNCConfig.json
+++ b/clpipe/batchConfigs/slurmUNCConfig.json
@@ -5,14 +5,14 @@
     "args": "1"
   }],
   "SubOptionsEqual": [],
-  "NThreadsCommand": "--cpus-per-task=",
+  "NThreadsCommand": "--cpus-per-task={nthreads}",
   "NThreads": "8",
-  "MemoryCommand": "--mem=",
+  "MemoryCommand": "--mem={mem}",
   "MemoryDefault": "20000",
-  "TimeCommand": "--time=",
+  "TimeCommand": "--time={time}",
   "TimeDefault": "16:0:0",
-  "JobIDCommand": "--job-name=",
-  "OutputCommand": "--output=",
+  "JobIDCommand": "--job-name={jobid}",
+  "OutputCommand": "--output={output}",
   "CommandWrapper": "--wrap=",
 
   "NoQuotes": false,
