Added email abilities

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -2,6 +2,7 @@
 	"ProjectTitle": "A Neuroimaging Project",
 	"Authors/Contributors": "",
 	"ProjectDirectory": "",
+	"EmailAddress": "",
 	"DICOMToBIDSOptions": {
 		"DICOMDirectory": "",
 		"BIDSDirectory": "",
