Add fmriprep nthreads

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -21,6 +21,7 @@
 		"FreesurferLicensePath": "/proj/hng/singularity_imgs/license.txt",
 		"FMRIPrepMemoryUsage": "20000",
 		"FMRIPrepTimeUsage": "16:0:0",
+		"NThreads": "8",
         "LogDirectory": ""
 	},
 	"PostProcessingOptions": {
