--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -57,7 +57,7 @@
 		"ScrubBehind": 1,
 		"ScrubContig": 2,
 		"RespNotchFilter": true,
-		"NotchRespFilterBand":[0.31,0.43],
+		"RespNotchFilterBand":[0.31,0.43],
 		"PostProcessingMemoryUsage": "20000",
 		"PostProcessingTimeUsage": "8:0:0",
 		"NThreads": "1",
