--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -17,10 +17,10 @@
 		"BIDSDirectory": "",
 		"WorkingDirectory": "",
 		"OutputDirectory": "",
-		"FMRIPrepPath": "/proj/hng/singularity_imgs/fmriprep_1.3.2.simg",
+		"FMRIPrepPath": "/proj/hng/singularity_imgs/fmriprep_1.5.3.sif",
 		"FreesurferLicensePath": "/proj/hng/singularity_imgs/license.txt",
 		"CommandLineOpts": "",
-		"TemplateFlowToggle": false,
+		"TemplateFlowToggle": true,
 		"TemplateFlowPath": "",
 		"TemplateFlowTemplates": ["MNI152NLin2009cAsym", "MNI152NLin6Asym", "OASIS30ANTs", "MNIPediatricAsym", "MNIInfant"],
 		"FMapCleanupROIs": 3,
