Begun confound pullout

--- a/clpipe/data/defaultGLMConfig.json
+++ b/clpipe/data/defaultGLMConfig.json
@@ -21,6 +21,20 @@
     },
     "PreppedDataDirectory": "",
     "PreppedSuffix": "resampled.nii.gz",
+    "PrepareConfounds": true,
+    "ConfoundSuffix": "desc-confounds_regressors.tsv",
+    "Confounds": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
+    "csf", "white_matter", "global_signal", "a_comp_cor.*"],
+    "ConfoundsQuad": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
+    "csf", "white_matter", "global_signal"],
+    "ConfoundsLagged": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
+    "csf", "white_matter", "global_signal"],
+    "ConfoundsQuadLagged": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
+    "csf", "white_matter", "global_signal"],
+    "Scrub": true,
+    "ScrubAhead": 0,
+    "ScrubBehind": 0,
+    "ScrubContiguous": 5,
     "MemoryUsage": "5000",
     "TimeUsage": "1:0:0",
     "NThreads": "1",
