--- a/clpipe/data/defaultGLMConfig.json
+++ b/clpipe/data/defaultGLMConfig.json
@@ -31,7 +31,9 @@
     "csf", "white_matter", "global_signal"],
     "ConfoundsQuadLagged": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
     "csf", "white_matter", "global_signal"],
-    "Scrub": true,
+    "MotionOutliers": true,
+    "ScrubVar": "framewise_displacement",
+    "Threshold": 0.2,
     "ScrubAhead": 0,
     "ScrubBehind": 0,
     "ScrubContiguous": 5,
