Documentation and Bug Fixes for GLM

--- a/clpipe/data/defaultGLMConfig.json
+++ b/clpipe/data/defaultGLMConfig.json
@@ -10,7 +10,6 @@
     "TaskName": "gng_example",
     "ReferenceImage": "SET REFERENCE",
     "DummyScans": 0,
-    "DropTimepointsCSV": "",
     "ApplyFMRIPREPMask": true,
     "MaskFolderRoot": "",
     "MaskSuffix": "space-MNI152NLin2009cAsym_desc-brain_mask.nii.gz",
@@ -19,17 +18,17 @@
       "BrightnessThreshold": 0,
       "FWHM": 0
     },
-    "PreppedDataDirectory": "",
-    "PreppedSuffix": "resampled.nii.gz",
+    "OutputDirectory": "",
+    "OutputSuffix": "resampled.nii.gz",
     "PrepareConfounds": true,
     "ConfoundSuffix": "desc-confounds_regressors.tsv",
     "Confounds": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
     "csf", "white_matter", "global_signal", "a_comp_cor.*"],
     "ConfoundsQuad": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
     "csf", "white_matter", "global_signal"],
-    "ConfoundsLagged": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
+    "ConfoundsDerive": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
     "csf", "white_matter", "global_signal"],
-    "ConfoundsQuadLagged": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
+    "ConfoundsQuadDerive": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
     "csf", "white_matter", "global_signal"],
     "MotionOutliers": true,
     "ScrubVar": "framewise_displacement",
@@ -43,7 +42,7 @@
     "LogDirectory": ""
   },
   "Level1Setups": [
-    { "ModelName": "example_L!",
+    { "ModelName": "example_L1",
       "TargetDirectory": "./data_BIDS",
       "TargetSuffix": "resampled.nii.gz",
       "FSFPrototype": "",
