Updated postprocessing regressor selection

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -27,7 +27,6 @@
 		"FMRIPrepMemoryUsage": "20000",
 		"FMRIPrepTimeUsage": "16:0:0",
 		"NThreads": "8",
-		"FMapCleanupROIs": -1,
         "LogDirectory": ""
 	},
 	"PostProcessingOptions": {
@@ -37,23 +36,21 @@
 		"OutputSuffix": "",
 		"ConfoundSuffix": "desc-confounds_regressors.tsv",
 		"Regress": true,
-		"RegressionParameters": {
-			  "MotionParams": ["trans_x","trans_y" ,"trans_z","rot_x","rot_z","rot_y"],
-			  "WhiteMatter": "white_matter",
-			  "CSF": "csf",
-  			  "FDLabel": "framewise_displacement",
-			  "GlobalSignal": "global_signal"
-		},
-		"NuisanceRegression": "QuadLagged",
-		"WhiteMatter": true,
-		"CSF": true,
-		"GlobalSignalRegression": true,
+	    "Confounds": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
+   		 "csf", "white_matter", "global_signal", "a_comp_cor.*"],
+		"ConfoundsQuad": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
+    	 "csf", "white_matter", "global_signal"],
+		"ConfoundsDerive": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
+    	 "csf", "white_matter", "global_signal"],
+		"ConfoundsQuadDerive": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
+    	 "csf", "white_matter", "global_signal"],
 		"FilteringHighPass": 0.008,
 		"FilteringLowPass": -1,
 		"FilteringOrder": 2,
 		"OversamplingFreq": 4,
 		"PercentFreqSample": 1,
 		"Scrubbing": true,
+		"ScrubVar": "framewise_displacement",
 		"ScrubFDThreshold": 0.3,
 		"ScrubAhead": 1,
 		"ScrubBehind": 1,
