Changed Derive to Deriv

--- a/clpipe/data/defaultGLMConfig.json
+++ b/clpipe/data/defaultGLMConfig.json
@@ -22,20 +22,16 @@
     "OutputSuffix": "resampled.nii.gz",
     "PrepareConfounds": true,
     "ConfoundSuffix": "desc-confounds_regressors.tsv",
-    "Confounds": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
-    "csf", "white_matter", "global_signal", "a_comp_cor.*"],
-    "ConfoundsQuad": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
-    "csf", "white_matter", "global_signal"],
-    "ConfoundsDerive": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
-    "csf", "white_matter", "global_signal"],
-    "ConfoundsQuadDerive": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z",
-    "csf", "white_matter", "global_signal"],
+    "Confounds": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z"],
+    "ConfoundsDerive": ["trans_x", "trans_y", "trans_z", "rot_x", "rot_y", "rot_z"],
+    "ConfoundsQuad": [],
+    "ConfoundsQuadDerive": [],
     "MotionOutliers": true,
     "ScrubVar": "framewise_displacement",
-    "Threshold": 0.2,
+    "Threshold": 0.9,
     "ScrubAhead": 0,
     "ScrubBehind": 0,
-    "ScrubContiguous": 5,
+    "ScrubContiguous": 0,
     "MemoryUsage": "5000",
     "TimeUsage": "1:0:0",
     "NThreads": "1",
